2007-05-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/flame/rect.c: reduced the number of progress updates.

2007-05-09  Karine Delvare  <edhel@gimp.org>

	* plug-ins/common/waves.c: use the new preview transform function, 
	see bug #356716.

2007-05-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_icc_apply): improved handling of
	attached non-RGB profiles.

	* plug-ins/common/oilify.c: use GIMP_RGB_LUMINANCE() instead of
	the self-made INTENSITY macro.

	* plug-ins/common/tiff-load.c
	* plug-ins/common/tiff-save.c: reduced number of progress updates.

2007-05-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c (script_fu_browse_response):
	focus the console entry, set the cursor position to the first
	parameter and present the console window.

2007-05-09  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-preview.c
	(gimp_display_shell_draw_tri_row)
	(gimp_display_shell_draw_tri_row_mask): don't call gdk_draw_pixbuf()
	with a zero width. Fixes bug #349483.

2007-05-08  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/xmp-encode.c (gen_property): quick workaround
	for bug #436077.  A better solution will follow later.

2007-05-08  Karine Delvare  <edhel@gimp.org>

	* plug-ins/common/flarefx.c: use the new preview transform function, 
	see bug #356716.

2007-05-08  Karine Delvare  <edhel@gimp.org>

	* plug-ins/common/papertile.c: Replace tile size with width & height,
	without changing the plug-in interface (bug #87092).

2007-05-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptexteditor.c: use GtkWindow::transient-for just
	for the fun of using another GTK+ 2.10 feature.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbaseenums.[ch] (GimpCloneType): changed strings.

2007-05-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpbrushtool.[ch] (gimp_brush_tool_draw): moved
	brush drawing code to the new function gimp_brush_tool_draw_brush().
