@@ -1,3 +1,7 @@
+2007-05-10  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/pygimp-image.c: bind gimp_image_resize_to_layers.
+
 2007-05-10  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/flame/rect.c: reduced the number of progress updates.
